--- a/CYFighter-editor/src/main/java/com/unknownpotato/cyfighter/editor/ui/Window.form
+++ b/CYFighter-editor/src/main/java/com/unknownpotato/cyfighter/editor/ui/Window.form
@@ -59,6 +59,16 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Edit"/>
           </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="stackMenuItem">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Stack"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="stackMenuItemActionPerformed"/>
+              </Events>
+            </MenuItem>
+          </SubComponents>
         </Menu>
       </SubComponents>
     </Menu>
